kubernetes-2/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-server-deployment
  template:
    metadata:
      labels:
        app: main-server-deployment
    spec:
      containers:
      - name: main-server-deployment
        image: main-server
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
