kubernetes-2/k8s/ingress-product.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  labels:
    app.kubernetes.io/name: product-ingress
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: product-service
            port: 
              number: 80
